--- a/tools/control/web/tmpl/dom-stpr.tmpl
+++ b/tools/control/web/tmpl/dom-stpr.tmpl
@@ -21,12 +21,21 @@ INCLUDE&dommenu.tmpl
 
   String domains[] = hsrw.getParameterValues("dom");
 
-  for (int i = 0; i < domains.length; i++)
+  if (domains == null || domains.length == 0)
   {
+%>
+Error: no domain specified.<br>
+<%
+  }
+  else
+  {
+    for (int i = 0; i < domains.length; i++)
+    {
 %>
 result <%= domains[i] %> =
  <%= command_stop.executeCommand(d, Integer.parseInt(domains[i])) %> <br>
 <%
+    }
   }
 %>
 
