bitkeeper revision 1.248 (3ecbab33jT8L3qW_jJN1CGBY-pMq9w)
make html more robust

--- a/tools/control/web/tmpl/dom-new.tmpl
+++ b/tools/control/web/tmpl/dom-new.tmpl
@@ -156,7 +156,7 @@ INCLUDE&dommenu.tmpl
 </tr>
 <tr>
   <td></td>
-  <td align="right">virtual disk<input type="radio" checked name="root" value="vdisk"></td>
+  <td align="right">virtual disk<input type="radio" name="root" value="vdisk"></td>
   <td align="right">path</td>
   <td></td>
   <td><input type="text" size="40" name="vdisk" value="/dev/xvda1"></td>
