--- a/tools/control/web/tmpl/vd-vbdf.tmpl
+++ b/tools/control/web/tmpl/vd-vbdf.tmpl
@@ -47,7 +47,13 @@ INCLUDE&vdmenu.tmpl
 <tr>
   <td><input type="submit" value="flush all vbds"></td>
 </tr>
+
+</td>
+</tbody>
+</table>
+
 </form>
+
 
 </td>
 </tbody>
