--- a/tools/control/web/tmpl/dom.tmpl
+++ b/tools/control/web/tmpl/dom.tmpl
@@ -16,7 +16,7 @@ INCLUDE&dommenu.tmpl
   <tr><td nowrap="nowrap">Domain Manager</td></tr>
   <tr><td></td></tr>
 <!--
-  <tr><td><%= d.XIToolsDir %></td></tr>
+  <tr><td><%= d.xiToolsDir %></td></tr>
 -->
 </tbody>
 </table>
