--- a/tools/control/web/tmpl/dom-delr.tmpl
+++ b/tools/control/web/tmpl/dom-delr.tmpl
@@ -17,7 +17,6 @@ INCLUDE&dommenu.tmpl
 <%
   HttpServletRequestWrapper hsrw = new HttpServletRequestWrapper(request);
   Defaults d = sc.getDefaults(); 
-  CommandDestroy command_destroy = new CommandDestroy();
 
   String domains[] = hsrw.getParameterValues("dom");
   boolean force = hsrw.getParameter("force").equals("true");
@@ -34,8 +33,8 @@ Error: no domain specified.<br>
     {
 %>
 result <%= domains[i] %> =
- <%= command_destroy.executeCommand(d, Integer.parseInt(domains[i]),
-                                    force) %> <br>
+ <%= new CommandDomainDestroy(d, Integer.parseInt(domains[i]),
+                                    force).executeWeb() %> <br>
 <%
     }
   }
