--- a/tools/control/web/tmpl/dom-lis.tmpl
+++ b/tools/control/web/tmpl/dom-lis.tmpl
@@ -11,9 +11,15 @@ INCLUDE&dommenu.tmpl
 <td valign="top">
 
 <%
-  CommandList command_list = new CommandList();
-  Defaults d = sc.getDefaults(); 
-  Domain domains[] = command_list.executeCommand(d);
+  CommandDomainList list = new CommandDomainList(sc.getDefaults());
+  String output = list.executeWeb();
+  Domain domains[] = list.domains();
+  if (output != null)
+  {
+%>
+<%= output %>
+<%
+  } else {
 %>
 
 <table cellpadding="2" cellspacing="0" border="0">
@@ -38,7 +44,9 @@ INCLUDE&dommenu.tmpl
   %>
 </tbody>
 </table>
-
+<%
+  }
+%>
 
 </td>
 </tbody>
