--- a/tools/control/web/tmpl/vd-pa.tmpl
+++ b/tools/control/web/tmpl/vd-pa.tmpl
@@ -20,11 +20,11 @@ INCLUDE&vdmenu.tmpl
 <tbody>
   <tr class="vdh"><td></td><td>maj:min</td><td>blocks</td><td>start sect</td><td>num sects</td><td>name</td></tr>
   <%
-    int count = root.getPartitionCount();
+    int count = root.pm().getPartitionCount();
     for (int loop = 0; loop < count; loop++)
     {
-	Partition p = root.getPartition(loop);
-	if (p.getIsXeno() == true)
+	Partition p = root.pm().getPartition(loop);
+	if (p.isXeno() == true)
         {
   %>
   <tr class="vds"><td></td>
