--- a/tools/control/web/tmpl/vd-vbdv.tmpl
+++ b/tools/control/web/tmpl/vd-vbdv.tmpl
@@ -16,16 +16,16 @@ INCLUDE&vdmenu.tmpl
 
 
   <%
-    for (Enumeration e = root.getVirtualBlockDevices(); e.hasMoreElements();)
+    for (Iterator i = root.vdm().getVirtualBlockDevices(); i.hasNext();)
     {
-      VirtualBlockDevice vbd = (VirtualBlockDevice) e.nextElement();
-      VirtualDisk vd = root.getVirtualDiskKey(vbd.getKey()); 
+      VirtualBlockDevice vbd = (VirtualBlockDevice) i.next();
+      VirtualDisk vd = vbd.getVirtualDisk(); 
   %>
     <tr class="vdt">
       <td><%= vbd.getDomain() %></td>
-      <td><%= vbd.getVBDNum() %></td>
+      <td><%= vbd.getVbdNum() %></td>
       <td><%= vbd.getMode().toString() %></td>
-      <td><%= vbd.getKey() %></td>
+      <td><%= vd.getKey() %></td>
       <td><%= vd.getName() %></td>
     </tr>
   <%
