--- a/tools/control/web/tmpl/vd-vddr.tmpl
+++ b/tools/control/web/tmpl/vd-vddr.tmpl
@@ -18,7 +18,7 @@ INCLUDE&vdmenu.tmpl
 
 vd= <%= hsrw.getParameter("vd") %>
 
-vd= <%= root.doDeleteVirtualDisk(hsrw.getParameter("vd")) %>
+vd= <%= new CommandVdDelete(hsrw.getParameter("vd")).execute() %>
 
 <%
   root.doFlushState();
