bitkeeper revision 1.330 (3f0d3d2bKhsLvy6rQeImnM5nqYXVnw)
Implement physical disk management in web interface

--- a/tools/control/web/tmpl/index.tmpl
+++ b/tools/control/web/tmpl/index.tmpl
@@ -45,6 +45,7 @@ COPYRIGHT&Computer Laboratory, University of Cambridge
   <td nowrap="nowrap">
    <a href="dom.jsp" class="homemenu">Domain Manager</a><br>
    <a href="vd.jsp" class="homemenu">Virtual Disk Manager</a><br>
+   <a href="pd.jsp" class="homemenu">Physical Disk Manager</a><br>
    </td>
 </tr>
 
