bitkeeper revision 1.333 (3f0d5c67WCK8celxi8KUCjs_eFc8QA)
Update web interface to work with new VBD interface.
Finish tidying up web build files

--- a/tools/control/web/tmpl/pd-gr.tmpl
+++ b/tools/control/web/tmpl/pd-gr.tmpl
@@ -51,7 +51,7 @@ Error: No domain specified.<br>
       {
 %>
 output[<%= i %>] =<br>
-<%= new CommandPhysicalGrant(d, domain, partitions[i], mode, false).execute() %> <br>
+<%= new CommandPhysicalGrant(d, domain, partitions[i], mode, false).executeWeb() %> <br>
 <%
       }
     } catch (NumberFormatException e) {
